syntax = "proto3";
import "video.proto";

package favorite;
// 这部分的内容是关于最后生成的go文件是处在哪个目录哪个包中，代表在当前目录生成，service代表了生成的go文件的包名是service
option go_package = ".;service;";

service Service {
  rpc FavoriteAction(FavoriteActionRequest) returns(FavoriteActionResponse);
  rpc FavoriteList(FavoriteListRequest) returns(FavoriteListResponse);
}

message FavoriteActionRequest {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
  int32 action_type = 3; // 1-点赞，2-取消点赞
}

message FavoriteActionResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

message FavoriteListRequest {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message FavoriteListResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated video.Video video_list = 3; // 用户点赞视频列表
}